--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,16 +14,8 @@ body {
   color: #4e4e4e;
 }
 
-@font-face {
-  font-family: "atamistencil";
-  src: url("atami-stencil-webfont.woff2") format("woff2"),
-    url("atami-stencil-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
-
 h1 {
-  font-family: "Atami Stencil";
+  font-family: "Allerta Stencil", sans-serif;
 }
 h2 {
   font-family: "Poppins", sans-serif;
@@ -50,7 +42,7 @@ a {
   color: #1e1e1e;
   text-decoration: none;
   transition: all 0.5s ease-in-out;
-  font-family: "Atami Stencil";
+  font-family: "Allerta Stencil", sans-serif;
 }
 a:hover {
   color: #2a4494;
