--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ h4 {
   font-family: "Poppins", sans-serif;
 }
 h5 {
-  font-family: "Futura";
+  font-family: "Futura", sans-serif;
   font-weight: medium;
 }
 h6 {
